Revert the change to new site_name

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Tardigrades.org Ensembl Genome Browser</title>
+<title>[[SPECIESDEFS::SITE_NAME]]</title>
 </head>
 <body>
 <div class="column-wrapper">
