Note about RVARI 101

--- a/htdocs/ssi/species/about_Ramazzottius_varieornatus_v101.html
+++ b/htdocs/ssi/species/about_Ramazzottius_varieornatus_v101.html
@@ -1,4 +1,6 @@
 <!-- {about} --><a name="about"></a>
+<h3>Note about v1.1 (v101):  We have re-predicted the gene models using BRAKER. The genome assembly is identical.</h3>
+<p></p>
   <p>(Extracted from genome publication [1]). R. varieornatus is an extremotolerant tardigrade species, which becomes almost completely dehydrated on desiccation and withstands various physical extremes. It tolerates direct exposure to low-humidity 
 conditions and withstands various extremes in the dehydrated state. R. varieornatus exhibits extraordinary tolerance against high-dose radiation.</p>
 
