Update suggested searches and about information

--- a/htdocs/ssi/species/about_Ramazzottius_varieornatus_v101.html
+++ b/htdocs/ssi/species/about_Ramazzottius_varieornatus_v101.html
@@ -29,12 +29,7 @@ organisms.</p>
 <!-- {assembly} -->
 <!-- {annotation} --><a name="annotation"></a>
   <h2 id="annotation" style="margin-bottom:5px">Annotation</h2>
-  <p>(Extracted from publication [1])</p>
-
-  <p>We generated gene models based on our messenger RNA-sequencing (RNA-seq) data for six states (two embryonic stages and four states of adults during dehydration and rehydration) and merged them with ab initio gene 
-models, to produce the comprehensive gene set, containing 19,521 protein-coding genes. The genome of this species was highly compact and, correspondingly, the mean length of coding sequences (1,062 bp), exons (234 bp) and 
-introns (402 bp) were fairly short and genes were densely distributed with short inter-coding sequence distances (mean 1,099 bp; Supplementary Table 3).</p>
-
+  <p>We generated gene models using the BRAKER pipeline with comprehensive RNA-seq datasets from different developmental stages. The previous gene set (v1) had a high proportion of single-exon genes, something which typically indicates erroneous gene prediction. The new prediction contains far few genes which may reflect genome reduction in <em>R. varieornatus</em> relative to <em>H. dujardini</em> (55 Mb relative to 104 Mb) or under prediction by BRAKER. 
 <!-- {annotation} -->
 <!-- {references} -->
   <h2>References</h2>
