Fix text associated with each assembly

--- a/htdocs/ssi/species/about_Hypsibius_dujardini_nhd231.html
+++ b/htdocs/ssi/species/about_Hypsibius_dujardini_nhd231.html
@@ -6,8 +6,7 @@
 <!-- {about} -->
 <!-- {assembly} --><a name="assembly"></a>
   <h2 id="assembly" style="margin-bottom:5px">Assembly</h2>
- <p>The latest version, version 3.0, of the <em>Hypsibius dujardini</em> genome is currently being analysed before being formally released and published. It was assembled by members from both Arakawa lab and the Blaxter Lab using PacBio data [1] and Illumina sequence data.</p>  
-<p>The previous version, <a href ="http://ensembl.tardigrades.org/Hypsibius_dujardini_nhd231/Info/Index">2.3</a>, was originally assembled by Georgios Koutsovoulos in the Blaxter Lab in 2016 [2].</p>
+ <p>This version of the genome was assembled by Georgios Koutsovoulos in the Blaxter Lab using Illumina sequence data. </p>  
 <!-- {assembly} -->
 <!-- {annotation} --><a name="annotation"></a>
   <h2 id="annotation" style="margin-bottom:5px">Annotation</h2>
@@ -16,7 +15,6 @@
 <!-- {references} -->
   <h2>References</h2>
   <ol>
-    <li><a id="ref-02"></a><a href="http://www.nature.com/articles/sdata201663">Genome sequencing of a single tardigrade <em>Hypsibius dujardini</em> individual</a>.
     <li><a id="ref-01"></a><a href="http://www.pnas.org/content/113/18/5053.full">No evidence for extensive horizontal gene transfer in the genome of the tardigrade <em>Hypsibius dujardini</em></a>.
   </ol>
  <!-- {references} -->
