--- a/htdocs/ssi/species/about_Ramazzottius_varieornatus_v101.html
+++ b/htdocs/ssi/species/about_Ramazzottius_varieornatus_v101.html
@@ -1,4 +1,5 @@
 <!-- {about} --><a name="about"></a>
+<p></p>
 <h3>Note about v1.1 (v101):  We have re-predicted the gene models using BRAKER. The genome assembly is identical.</h3>
 <p></p>
   <p>(Extracted from genome publication [1]). R. varieornatus is an extremotolerant tardigrade species, which becomes almost completely dehydrated on desiccation and withstands various physical extremes. It tolerates direct exposure to low-humidity 
@@ -29,7 +30,7 @@ organisms.</p>
 <!-- {assembly} -->
 <!-- {annotation} --><a name="annotation"></a>
   <h2 id="annotation" style="margin-bottom:5px">Annotation</h2>
-  <p>We generated gene models using the BRAKER pipeline with comprehensive RNA-seq datasets from different developmental stages. The previous gene set (v1) had a high proportion of single-exon genes, something which typically indicates erroneous gene prediction. The new prediction contains far few genes which may reflect genome reduction in <em>R. varieornatus</em> relative to <em>H. dujardini</em> (55 Mb relative to 104 Mb) or under prediction by BRAKER. 
+  <p>We generated gene models using the BRAKER pipeline with comprehensive RNA-seq datasets from different developmental stages. The previous gene set (v1) had a high proportion of single-exon genes, something which typically indicates erroneous gene prediction. The new prediction contains fewer genes (13,920 versus 21,493). 
 <!-- {annotation} -->
 <!-- {references} -->
   <h2>References</h2>
